--- a/package.json
+++ b/package.json
@@ -4,58 +4,60 @@
   "homepage": "http://bootstrapdash.com/demo/purple-react-free/template/demo_1/preview",
   "private": true,
   "dependencies": {
-    "@mdi/font": "^4.2.95",
-    "bootstrap": "^4.3.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@mdi/font": "^4.9.95",
+    "bootstrap": "^4.5.2",
     "bosket": "^0.2.3",
     "brace": "^0.11.1",
     "bs-custom-file-input": "^1.3.4",
-    "canvasjs": "^1.8.1",
-    "chart.js": "^2.8.0",
+    "canvasjs": "^1.8.3",
+    "chart.js": "^2.9.3",
     "compass-mixins": "^0.12.10",
-    "i18next": "^19.0.0",
-    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next": "^19.8.2",
+    "i18next-browser-languagedetector": "^4.3.1",
     "namor": "^1.1.3",
-    "node-sass": "^4.12.0",
-    "nouislider-react": "^3.3.2",
-    "react": "^16.9.0",
-    "react-ace": "^7.0.4",
+    "node-sass": "^4.14.1",
+    "nouislider-react": "^3.3.8",
+    "react": "^16.13.1",
+    "react-ace": "^7.0.5",
     "react-beautiful-dnd": "^11.0.5",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-bootstrap-editable": "^0.5.1",
-    "react-bootstrap-table-next": "^3.2.0",
-    "react-bootstrap-table2-paginator": "^2.1.0",
-    "react-bootstrap-table2-toolkit": "^2.1.0",
+    "react-bootstrap": "^1.3.0",
+    "react-bootstrap-editable": "^0.5.3",
+    "react-bootstrap-table-next": "^3.3.5",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-c3js": "^0.1.20",
-    "react-chartjs-2": "^2.8.0",
+    "react-chartjs-2": "^2.10.0",
     "react-clipboard.js": "^2.0.16",
-    "react-color": "^2.17.3",
-    "react-contextmenu": "^2.11.0",
+    "react-color": "^2.18.1",
+    "react-contextmenu": "^2.14.0",
     "react-data-sort": "^1.2.1",
-    "react-datepicker": "^2.9.6",
-    "react-dnd": "^9.4.0",
-    "react-dnd-html5-backend": "^9.4.0",
+    "react-datepicker": "^2.16.0",
+    "react-dnd": "^9.5.1",
+    "react-dnd-html5-backend": "^9.5.1",
     "react-dnd-multi-backend": "^3.2.2",
-    "react-dnd-touch-backend": "^9.4.0",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^11.2.1",
-    "react-images": "^1.0.0",
-    "react-input-mask": "^3.0.0-alpha.0",
+    "react-dnd-touch-backend": "^9.5.1",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.3",
+    "react-images": "^1.1.7",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-jvectormap": "0.0.13",
-    "react-quill": "^1.3.3",
+    "react-quill": "^1.3.5",
     "react-rating": "^1.7.2",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1",
-    "react-select": "^3.0.8",
-    "react-simple-maps": "^1.0.0-beta.0",
-    "react-simplemde-editor": "^4.1.0",
+    "react-select": "^3.1.0",
+    "react-simple-maps": "^1.0.0",
+    "react-simplemde-editor": "^4.1.3",
     "react-slick": "^0.25.2",
     "react-sparklines": "^1.7.0",
     "react-svg-gauge": "^1.0.10",
-    "react-table": "^6.10.3",
-    "react-tag-autocomplete": "^5.11.1",
+    "react-table": "^6.11.5",
+    "react-tag-autocomplete": "^5.13.1",
     "react-treebeard": "^3.2.4",
-    "react-trello": "^2.2.3",
+    "react-trello": "^2.2.8",
     "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
