--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@mdi/font": "^4.9.95",
     "bootstrap": "^4.5.2",
     "bosket": "^0.2.3",
@@ -21,6 +22,7 @@
     "nouislider-react": "^3.3.8",
     "react": "^16.13.1",
     "react-ace": "^7.0.5",
+    "react-barcode-reader": "0.0.2",
     "react-beautiful-dnd": "^11.0.5",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-editable": "^0.5.3",
@@ -47,7 +49,7 @@
     "react-quill": "^1.3.5",
     "react-rating": "^1.7.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
     "react-simple-maps": "^1.0.0",
     "react-simplemde-editor": "^4.1.3",
