--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "react-slick": "^0.25.2",
     "react-sparklines": "^1.7.0",
     "react-svg-gauge": "^1.0.10",
+    "react-tab": "^1.0.0",
     "react-table": "^6.11.5",
+    "react-tabs": "^3.1.1",
     "react-tag-autocomplete": "^5.13.1",
     "react-treebeard": "^3.2.4",
     "react-trello": "^2.2.8",
