--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://bootstrapdash.com/demo/purple-react-free/template/demo_1/preview",
   "private": true,
   "dependencies": {
+    "@createnextapp/react-barcode": "^1.1.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -17,11 +18,13 @@
     "compass-mixins": "^0.12.10",
     "i18next": "^19.8.2",
     "i18next-browser-languagedetector": "^4.3.1",
+    "jsbarcode": "^3.11.3",
     "namor": "^1.1.3",
     "node-sass": "^4.14.1",
     "nouislider-react": "^3.3.8",
     "react": "^16.13.1",
     "react-ace": "^7.0.5",
+    "react-barcode": "^1.4.0",
     "react-barcode-reader": "0.0.2",
     "react-beautiful-dnd": "^11.0.5",
     "react-bootstrap": "^1.3.0",
@@ -49,7 +52,7 @@
     "react-quill": "^1.3.5",
     "react-rating": "^1.7.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^3.4.4",
     "react-select": "^3.1.0",
     "react-simple-maps": "^1.0.0",
     "react-simplemde-editor": "^4.1.3",
