--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "canvasjs": "^1.8.3",
     "chart.js": "^2.9.3",
     "compass-mixins": "^0.12.10",
+    "dom-to-image": "^2.6.0",
+    "html2canvas": "^1.0.0-rc.7",
     "i18next": "^19.8.2",
     "i18next-browser-languagedetector": "^4.3.1",
     "jsbarcode": "^3.11.3",
@@ -34,6 +36,7 @@
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-c3js": "^0.1.20",
+    "react-canvas-wrapper": "^0.5.1",
     "react-chartjs-2": "^2.10.0",
     "react-clipboard.js": "^2.0.16",
     "react-color": "^2.18.1",
@@ -49,6 +52,7 @@
     "react-images": "^1.1.7",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-jvectormap": "0.0.13",
+    "react-pdf": "^5.0.0",
     "react-quill": "^1.3.5",
     "react-rating": "^1.7.2",
     "react-router-dom": "^5.2.0",
