--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next": "^19.8.2",
     "i18next-browser-languagedetector": "^4.3.1",
     "jsbarcode": "^3.11.3",
+    "material-table": "^1.69.1",
     "namor": "^1.1.3",
     "node-sass": "^4.14.1",
     "nouislider-react": "^3.3.8",
