completed login logout flow

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "purple-react-free",
+  "name": "gupta-store",
   "version": "1.1.0",
-  "homepage": "http://bootstrapdash.com/demo/purple-react-free/template/demo_1/preview",
   "private": true,
   "dependencies": {
     "@createnextapp/react-barcode": "^1.1.1",
